deployment/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: healthlink-backend-deployment
  namespace: healthlink-namespace
spec:
  replicas: 4
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: healthlink-backend
  template:
    metadata:
      labels:
        app: healthlink-backend
    spec:
      containers:
        - name: healthlink-backend
          image: kavindudamisith/healthlinkback:v3
          ports:
            - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: healthlink-backend-service
  namespace: healthlink-namespace
spec:
  type: NodePort  # Allows access from outside Minikube
  selector:
    app: healthlink-backend
  ports:
    - protocol: TCP
      port: 80          # Internal service port
      targetPort: 3001  # Your container’s port
      nodePort: 30001   # Choose a port between 30000-32767
