deployment/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: healthlink-ingress
  namespace: healthlink-namespace
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: healthlink
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: healthlink-frontend-service
                port:
                  number: 80

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: healthlink-backend-service
                port:
                  number: 80
